examples/test/testpolicy5109.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5109
  namespace: namespace194
spec:
  podSelector:
    matchLabels:
      key10: value15
      key29: value45
      key36: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value36
          key10: value30
          key26: value34
